[project]
name = "pyned2lla"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
description = "NED (North East Down) to LLA (Latitude Longitude Altitude) conversion for Python"
readme = "README.md"
authors = [{ name = "Andrew Straw", email = "strawman@astraw.com" }]

[project.urls]
Homepage = "https://github.com/strawlab/pyned2lla"

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
